<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/input_padding">

        <TextView
            android:id="@+id/brandText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_text"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/input_padding"
            android:layout_toRightOf="@+id/brandText"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/categoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/brandText"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/category_text"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/brandText"
            android:layout_marginLeft="@dimen/input_padding"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/categoryText"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/capacityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/categoryText"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/capacity_text"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/categoryText"
            android:layout_marginLeft="@dimen/input_padding"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/capacityText"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/broken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/capacityText"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/appliance_broken_text"
            android:textSize="@dimen/text_size" />

        <RadioGroup
            android:id="@+id/brokenRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/capacityText"
            android:layout_marginLeft="@dimen/input_padding"
            android:layout_marginTop="@dimen/input_padding"
            android:layout_toRightOf="@+id/broken"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="RtlHardcoded">

            <RadioButton
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/yes" />

            <RadioButton
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/no" />

        </RadioGroup>

        <!--<View-->
            <!--android:id="@+id/border2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="1dp"-->
            <!--android:layout_below="@+id/brokenRadio"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:background="@color/colorPrimary" />-->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/child_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/brokenRadio"
            android:layout_marginTop="@dimen/input_padding">

        </android.support.v7.widget.RecyclerView>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/child_recyclerview"
            android:id="@+id/serialNoInput"
            android:layout_marginLeft="@dimen/input_padding"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/serialNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_serial_number"
                android:textSize="@dimen/text_size" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/sNPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/serialNoInput"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/input_padding"
            android:text="@string/serial_no_pic_text"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:id="@+id/sNCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/serialNoInput"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="13dp"
            android:layout_toRightOf="@+id/sNPic"
            android:contentDescription="@null"
            android:src="@drawable/ic_action_camera"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>
</android.support.v7.widget.CardView>