<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.around.technician.AmountPaidActivity"
    tools:showIn="@layout/activity_amount_paid">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="?attr/dialogPreferredPadding"
                tools:ignore="UselessParent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/amountPaid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:hint="@string/input_paid_amount_hint"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/remarks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:hint="@string/input_remarks_hint"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardview1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            app:cardPreventCornerOverlap="false">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/paymentType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="Choose Your Payment Method"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <RadioGroup

                    android:id="@+id/paymentGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/paymentType"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/cash"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Cash"
                        android:clickable="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15dp" />

                    <RadioButton
                        android:id="@+id/paytm"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="Paytm"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15dp" />

                </RadioGroup>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/submit"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:onClick="submitProcess"
            android:layout_height="@dimen/login_button_height"
            android:layout_below="@+id/cardview2"
            android:layout_marginTop="@dimen/submit_button"
            android:background="@color/colorPrimary"
            android:text="@string/proceed"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
